opam-version: "2.0"
maintainer:  ["maintenance@identity-function.com"]
license:      "ISC"
homepage:     "https://github.com/yomimono/ocaml-certify"
dev-repo:     "git+https://github.com/yomimono/ocaml-certify.git"
bug-reports:  "https://github.com/yomimono/ocaml-certify/issues"
doc:          "https://yomimono.github.io/ocaml-certify/doc"
synopsis:     "CLI utilities for simple X509 certificate manipulation"
authors: [
  "Mindy Preston"
]
tags: ["org:mirage"]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "test/test.sh" ] {with-test}
]
depends: [
  "dune" {>= "1.0"}
  "mirage-crypto-pk"
  "mirage-crypto-rng"
  "x509" {>= "0.12.1"}
  "cstruct" {>= "3.2.0"}
  "ptime"
  "ocaml" {>= "4.07.0"}
  "cmdliner" {>= "1.0.0"}
  "conf-openssl" {with-test}
]
description: """
`certify` is a small selection of useful utilities for manipulating X509 certificates and public keys.  It uses the mirleft organization's x509, tls, and nocrypto libraries.

Three subcommands to `certify` are provided:
* `certify csr`: make a certificate signing request
* `certify selfsign`: make a self-signed certificate
* `certify sign`: sign a certificate
"""
